# routes/index.js
@@ -6,19 +6,18 @@ const router = express.Router();
 // GETTING ALL DIFFERENT APP ROUTES
 const homeRouter = require('./homeRoute.js');
 const userRouter = require('./usersRoutes');
-const housesRouter = require('./housesRoutes');
-const apartmentsRouter = require('./apartmentsRoutes');
-const appointmentsRouter = require('./appointmentsRoutes');
+const houseRouter = require('./housesRoutes');
+const apartmentRouter = require('./apartmentsRoutes');
+// const appointmentRouter = require('./appointmentsRoutes');
 const swaggerRouter = require('./swaggerConnectionRoutes');
 
 // LINKING ALL DIFFERENT APP ROUTES TO SINGLE MAIN ROUTE
 router.use('/', swaggerRouter);
 router.use('/', homeRouter);
 router.use('/users', userRouter);
-/*router.use('/houses', housesRouter);
-router.use('/apartments', apartmentsRouter);
-router.use('/appointments', appointmentsRouter);*/ 
-//UNCOMMENT ABOVE 3 STATMENTS WHEN HOUSES, APARTMENTS, AND APPOINTMENTS ROUTES ARE DONE.
-
+router.use('/houses', houseRouter);
+router.use('/apartments', apartmentRouter);
+// router.use('/appointments', appointmentRouter);
+//UNCOMMENT LINE 19 WHEN APPOINTMENTS ROUTES ARE DONE.
 
 module.exports = router;
